; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_get_value.c_menu_cbs_init_bind_get_string_representation_compare_type.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_get_value.c_menu_cbs_init_bind_get_string_representation_compare_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MENU_SETTINGS_INPUT_DESC_BEGIN = common dso_local global i32 0, align 4
@MENU_SETTINGS_INPUT_DESC_END = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_input_desc = common dso_local global i32 0, align 4
@MENU_SETTINGS_CHEAT_BEGIN = common dso_local global i32 0, align 4
@MENU_SETTINGS_CHEAT_END = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_cheat = common dso_local global i32 0, align 4
@MENU_SETTINGS_PERF_COUNTERS_BEGIN = common dso_local global i32 0, align 4
@MENU_SETTINGS_PERF_COUNTERS_END = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_perf_counters = common dso_local global i32 0, align 4
@MENU_SETTINGS_LIBRETRO_PERF_COUNTERS_BEGIN = common dso_local global i32 0, align 4
@MENU_SETTINGS_LIBRETRO_PERF_COUNTERS_END = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_libretro_perf_counters = common dso_local global i32 0, align 4
@MENU_SETTINGS_INPUT_DESC_KBD_BEGIN = common dso_local global i32 0, align 4
@MENU_SETTINGS_INPUT_DESC_KBD_END = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_input_desc_kbd = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_core_option_create = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_core = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_plain = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_movie = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_music = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_imageviewer = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_use_directory = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_directory = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_parent_directory = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_carchive = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_overlay = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_font = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_shader = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_shader_preset = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_config = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_in_carchive = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_filter = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_url_core = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_rdb = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_cursor = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_cheat = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_cheat_match = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_more = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_disk_index = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_db_entry = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_entry_url = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_no_items = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_entry = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label = common dso_local global i32 0, align 4
@MENU_SETTINGS_AUDIO_MIXER_STREAM_ACTIONS_VOLUME_BEGIN = common dso_local global i32 0, align 4
@MENU_SETTINGS_AUDIO_MIXER_STREAM_ACTIONS_VOLUME_END = common dso_local global i32 0, align 4
@MENU_SETTINGS_AUDIO_MIXER_STREAM_BEGIN = common dso_local global i32 0, align 4
@MENU_SETTINGS_AUDIO_MIXER_STREAM_END = common dso_local global i32 0, align 4
@menu_action_setting_audio_mixer_stream_name = common dso_local global i32 0, align 4
@menu_action_setting_audio_mixer_stream_volume = common dso_local global i32 0, align 4
@menu_action_setting_disp_set_label_menu_file_video_layout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @menu_cbs_init_bind_get_string_representation_compare_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @menu_cbs_init_bind_get_string_representation_compare_type(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @MENU_SETTINGS_INPUT_DESC_BEGIN, align 4
  %7 = icmp uge i32 %5, %6
  br i1 %7, label %8, label %16

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @MENU_SETTINGS_INPUT_DESC_END, align 4
  %11 = icmp ule i32 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @menu_action_setting_disp_set_label_input_desc, align 4
  %15 = call i32 @BIND_ACTION_GET_VALUE(i32* %13, i32 %14)
  br label %187

16:                                               ; preds = %8, %2
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @MENU_SETTINGS_CHEAT_BEGIN, align 4
  %19 = icmp uge i32 %17, %18
  br i1 %19, label %20, label %28

20:                                               ; preds = %16
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @MENU_SETTINGS_CHEAT_END, align 4
  %23 = icmp ule i32 %21, %22
  br i1 %23, label %24, label %28

24:                                               ; preds = %20
  %25 = load i32*, i32** %3, align 8
  %26 = load i32, i32* @menu_action_setting_disp_set_label_cheat, align 4
  %27 = call i32 @BIND_ACTION_GET_VALUE(i32* %25, i32 %26)
  br label %186

28:                                               ; preds = %20, %16
  %29 = load i32, i32* %4, align 4
  %30 = load i32, i32* @MENU_SETTINGS_PERF_COUNTERS_BEGIN, align 4
  %31 = icmp uge i32 %29, %30
  br i1 %31, label %32, label %40

32:                                               ; preds = %28
  %33 = load i32, i32* %4, align 4
  %34 = load i32, i32* @MENU_SETTINGS_PERF_COUNTERS_END, align 4
  %35 = icmp ule i32 %33, %34
  br i1 %35, label %36, label %40

36:                                               ; preds = %32
  %37 = load i32*, i32** %3, align 8
  %38 = load i32, i32* @menu_action_setting_disp_set_label_perf_counters, align 4
  %39 = call i32 @BIND_ACTION_GET_VALUE(i32* %37, i32 %38)
  br label %185

40:                                               ; preds = %32, %28
  %41 = load i32, i32* %4, align 4
  %42 = load i32, i32* @MENU_SETTINGS_LIBRETRO_PERF_COUNTERS_BEGIN, align 4
  %43 = icmp uge i32 %41, %42
  br i1 %43, label %44, label %52

44:                                               ; preds = %40
  %45 = load i32, i32* %4, align 4
  %46 = load i32, i32* @MENU_SETTINGS_LIBRETRO_PERF_COUNTERS_END, align 4
  %47 = icmp ule i32 %45, %46
  br i1 %47, label %48, label %52

48:                                               ; preds = %44
  %49 = load i32*, i32** %3, align 8
  %50 = load i32, i32* @menu_action_setting_disp_set_label_libretro_perf_counters, align 4
  %51 = call i32 @BIND_ACTION_GET_VALUE(i32* %49, i32 %50)
  br label %184

52:                                               ; preds = %44, %40
  %53 = load i32, i32* %4, align 4
  %54 = load i32, i32* @MENU_SETTINGS_INPUT_DESC_KBD_BEGIN, align 4
  %55 = icmp uge i32 %53, %54
  br i1 %55, label %56, label %64

56:                                               ; preds = %52
  %57 = load i32, i32* %4, align 4
  %58 = load i32, i32* @MENU_SETTINGS_INPUT_DESC_KBD_END, align 4
  %59 = icmp ule i32 %57, %58
  br i1 %59, label %60, label %64

60:                                               ; preds = %56
  %61 = load i32*, i32** %3, align 8
  %62 = load i32, i32* @menu_action_setting_disp_set_label_input_desc_kbd, align 4
  %63 = call i32 @BIND_ACTION_GET_VALUE(i32* %61, i32 %62)
  br label %183

64:                                               ; preds = %56, %52
  %65 = load i32, i32* %4, align 4
  switch i32 %65, label %178 [
    i32 140, label %66
    i32 162, label %70
    i32 159, label %70
    i32 149, label %74
    i32 153, label %78
    i32 152, label %82
    i32 156, label %86
    i32 155, label %86
    i32 145, label %90
    i32 160, label %94
    i32 150, label %98
    i32 165, label %102
    i32 151, label %106
    i32 157, label %110
    i32 147, label %114
    i32 146, label %118
    i32 163, label %122
    i32 154, label %126
    i32 144, label %130
    i32 166, label %130
    i32 158, label %134
    i32 148, label %138
    i32 161, label %142
    i32 164, label %146
    i32 142, label %150
    i32 128, label %154
    i32 139, label %154
    i32 138, label %154
    i32 137, label %154
    i32 134, label %154
    i32 7, label %154
    i32 135, label %154
    i32 136, label %154
    i32 141, label %158
    i32 31, label %162
    i32 25, label %166
    i32 26, label %166
    i32 131, label %170
    i32 130, label %170
    i32 132, label %170
    i32 133, label %170
    i32 129, label %170
    i32 32, label %174
    i32 65535, label %174
  ]

66:                                               ; preds = %64
  %67 = load i32*, i32** %3, align 8
  %68 = load i32, i32* @menu_action_setting_disp_set_label_core_option_create, align 4
  %69 = call i32 @BIND_ACTION_GET_VALUE(i32* %67, i32 %68)
  br label %182

70:                                               ; preds = %64, %64
  %71 = load i32*, i32** %3, align 8
  %72 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_core, align 4
  %73 = call i32 @BIND_ACTION_GET_VALUE(i32* %71, i32 %72)
  br label %182

74:                                               ; preds = %64
  %75 = load i32*, i32** %3, align 8
  %76 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_plain, align 4
  %77 = call i32 @BIND_ACTION_GET_VALUE(i32* %75, i32 %76)
  br label %182

78:                                               ; preds = %64
  %79 = load i32*, i32** %3, align 8
  %80 = load i32, i32* @menu_action_setting_disp_set_label_movie, align 4
  %81 = call i32 @BIND_ACTION_GET_VALUE(i32* %79, i32 %80)
  br label %182

82:                                               ; preds = %64
  %83 = load i32*, i32** %3, align 8
  %84 = load i32, i32* @menu_action_setting_disp_set_label_music, align 4
  %85 = call i32 @BIND_ACTION_GET_VALUE(i32* %83, i32 %84)
  br label %182

86:                                               ; preds = %64, %64
  %87 = load i32*, i32** %3, align 8
  %88 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_imageviewer, align 4
  %89 = call i32 @BIND_ACTION_GET_VALUE(i32* %87, i32 %88)
  br label %182

90:                                               ; preds = %64
  %91 = load i32*, i32** %3, align 8
  %92 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_use_directory, align 4
  %93 = call i32 @BIND_ACTION_GET_VALUE(i32* %91, i32 %92)
  br label %182

94:                                               ; preds = %64
  %95 = load i32*, i32** %3, align 8
  %96 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_directory, align 4
  %97 = call i32 @BIND_ACTION_GET_VALUE(i32* %95, i32 %96)
  br label %182

98:                                               ; preds = %64
  %99 = load i32*, i32** %3, align 8
  %100 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_parent_directory, align 4
  %101 = call i32 @BIND_ACTION_GET_VALUE(i32* %99, i32 %100)
  br label %182

102:                                              ; preds = %64
  %103 = load i32*, i32** %3, align 8
  %104 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_carchive, align 4
  %105 = call i32 @BIND_ACTION_GET_VALUE(i32* %103, i32 %104)
  br label %182

106:                                              ; preds = %64
  %107 = load i32*, i32** %3, align 8
  %108 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_overlay, align 4
  %109 = call i32 @BIND_ACTION_GET_VALUE(i32* %107, i32 %108)
  br label %182

110:                                              ; preds = %64
  %111 = load i32*, i32** %3, align 8
  %112 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_font, align 4
  %113 = call i32 @BIND_ACTION_GET_VALUE(i32* %111, i32 %112)
  br label %182

114:                                              ; preds = %64
  %115 = load i32*, i32** %3, align 8
  %116 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_shader, align 4
  %117 = call i32 @BIND_ACTION_GET_VALUE(i32* %115, i32 %116)
  br label %182

118:                                              ; preds = %64
  %119 = load i32*, i32** %3, align 8
  %120 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_shader_preset, align 4
  %121 = call i32 @BIND_ACTION_GET_VALUE(i32* %119, i32 %120)
  br label %182

122:                                              ; preds = %64
  %123 = load i32*, i32** %3, align 8
  %124 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_config, align 4
  %125 = call i32 @BIND_ACTION_GET_VALUE(i32* %123, i32 %124)
  br label %182

126:                                              ; preds = %64
  %127 = load i32*, i32** %3, align 8
  %128 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_in_carchive, align 4
  %129 = call i32 @BIND_ACTION_GET_VALUE(i32* %127, i32 %128)
  br label %182

130:                                              ; preds = %64, %64
  %131 = load i32*, i32** %3, align 8
  %132 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_filter, align 4
  %133 = call i32 @BIND_ACTION_GET_VALUE(i32* %131, i32 %132)
  br label %182

134:                                              ; preds = %64
  %135 = load i32*, i32** %3, align 8
  %136 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_url_core, align 4
  %137 = call i32 @BIND_ACTION_GET_VALUE(i32* %135, i32 %136)
  br label %182

138:                                              ; preds = %64
  %139 = load i32*, i32** %3, align 8
  %140 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_rdb, align 4
  %141 = call i32 @BIND_ACTION_GET_VALUE(i32* %139, i32 %140)
  br label %182

142:                                              ; preds = %64
  %143 = load i32*, i32** %3, align 8
  %144 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_cursor, align 4
  %145 = call i32 @BIND_ACTION_GET_VALUE(i32* %143, i32 %144)
  br label %182

146:                                              ; preds = %64
  %147 = load i32*, i32** %3, align 8
  %148 = load i32, i32* @menu_action_setting_disp_set_label_menu_file_cheat, align 4
  %149 = call i32 @BIND_ACTION_GET_VALUE(i32* %147, i32 %148)
  br label %182

150:                                              ; preds = %64
  %151 = load i32*, i32** %3, align 8
  %152 = load i32, i32* @menu_action_setting_disp_set_label_cheat_match, align 4
  %153 = call i32 @BIND_ACTION_GET_VALUE(i32* %151, i32 %152)
  br label %182

154:                                              ; preds = %64, %64, %64, %64, %64, %64, %64, %64
  %155 = load i32*, i32** %3, align 8
  %156 = load i32, i32* @menu_action_setting_disp_set_label_menu_more, align 4
  %157 = call i32 @BIND_ACTION_GET_VALUE(i32* %155, i32 %156)
  br label %182

158:                                              ; preds = %64
  %159 = load i32*, i32** %3, align 8
  %160 = load i32, i32* @menu_action_setting_disp_set_label_menu_disk_index, align 4
  %161 = call i32 @BIND_ACTION_GET_VALUE(i32* %159, i32 %160)
  br label %182

162:                                              ; preds = %64
  %163 = load i32*, i32** %3, align 8
  %164 = load i32, i32* @menu_action_setting_disp_set_label_db_entry, align 4
  %165 = call i32 @BIND_ACTION_GET_VALUE(i32* %163, i32 %164)
  br label %182

166:                                              ; preds = %64, %64
  %167 = load i32*, i32** %3, align 8
  %168 = load i32, i32* @menu_action_setting_disp_set_label_entry_url, align 4
  %169 = call i32 @BIND_ACTION_GET_VALUE(i32* %167, i32 %168)
  br label %182

170:                                              ; preds = %64, %64, %64, %64, %64
  %171 = load i32*, i32** %3, align 8
  %172 = load i32, i32* @menu_action_setting_disp_set_label_no_items, align 4
  %173 = call i32 @BIND_ACTION_GET_VALUE(i32* %171, i32 %172)
  br label %182

174:                                              ; preds = %64, %64
  %175 = load i32*, i32** %3, align 8
  %176 = load i32, i32* @menu_action_setting_disp_set_label_entry, align 4
  %177 = call i32 @BIND_ACTION_GET_VALUE(i32* %175, i32 %176)
  br label %182

178:                                              ; preds = %64
  %179 = load i32*, i32** %3, align 8
  %180 = load i32, i32* @menu_action_setting_disp_set_label, align 4
  %181 = call i32 @BIND_ACTION_GET_VALUE(i32* %179, i32 %180)
  br label %182

182:                                              ; preds = %178, %174, %170, %166, %162, %158, %154, %150, %146, %142, %138, %134, %130, %126, %122, %118, %114, %110, %106, %102, %98, %94, %90, %86, %82, %78, %74, %70, %66
  br label %183

183:                                              ; preds = %182, %60
  br label %184

184:                                              ; preds = %183, %48
  br label %185

185:                                              ; preds = %184, %36
  br label %186

186:                                              ; preds = %185, %24
  br label %187

187:                                              ; preds = %186, %12
  ret i32 0
}

declare dso_local i32 @BIND_ACTION_GET_VALUE(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
